--- a/app/templates/plants/view.html
+++ b/app/templates/plants/view.html
@@ -148,8 +148,8 @@
             {{ action.action_at[:10] if action.action_at else 'Unknown date' }}
           </p>
         </div>
-        {% if action.photo_url %}
-          <img src="{{ action.photo_url }}" alt="Care photo" class="w-16 h-16 object-cover rounded-lg flex-shrink-0">
+        {% if action.photo_url_thumb or action.photo_url %}
+          <img src="{{ action.photo_url_thumb or action.photo_url }}" alt="Care photo" class="w-16 h-16 object-cover rounded-lg flex-shrink-0">
         {% endif %}
       </div>
       {% endfor %}
